@@ -10,7 +10,7 @@ exec wish "$0" -- "$@"
 ######################################################
 # Version: 2.0.0
 # Release: alpha
-# Build: 15082022113125
+# Build: 16082022151910
 ######################################################
 
 # определим текущую версию, релиз и т.д.
